--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-#Stuff
+Flask==0.10.1
+Flask-SQLAlchemy==1.0
+Jinja2==2.7.1
+MarkupSafe==0.18
+SQLAlchemy==0.8.2
+Werkzeug==0.9.4
+httplib2==0.8
+itsdangerous==0.23
+oauth2==1.5.211
+wsgiref==0.1.2
